--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/react-dom": "^18.2.18",
     "@types/react-router-dom": "^5.3.3",
     "@types/redux-logger": "^3.0.13",
+    "@types/socket.io-client": "^3.0.0",
     "@types/styled-components": "^5.1.34"
   },
   "scripts": {
